--- a/ForFormation/Views/Home/Index.cshtml
+++ b/ForFormation/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="jumbotron text-center">
     <h1>Mes formations</h1>
-    <p> Choissisez la meilleur formation</p>
+    <p> Choissisez les meilleurs formations</p>
 </div>
 <div class="container text-center">
     <h2>Pourquoi utiliser Avis Formation ? </h2>
