--- a/ForFormation/Views/Home/Index.cshtml
+++ b/ForFormation/Views/Home/Index.cshtml
@@ -11,7 +11,8 @@
     <h2>Pourquoi utiliser Avis Formation ? </h2>
     <h3>Bénéfices formateur</h3>
 
-    <div class="row">
+    <div id="bgW" class="row">
+        <i class="fa-solid fa-block-question"></i>
         <div class="col-md-6">
             conversion
         </div>
@@ -43,6 +44,26 @@
                     Avis récoltés par AvisFormation.fr
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row text-center">
+        <div class="col-md-3">
+            <h4>85%</h4>
+            <p>85% des visiteurs consultent les avis clients avant d'avoir acheté</p>
+        </div>
+        <div class="col-md-3">
+            <h4>91%</h4>
+            <p>91% de ceux qui lisent les avis les considerent comme le vecteur numéro 1 dans le décisions d'achat</p>
+        </div>
+        <div class="col-md-3">
+            <h4>25%</h4>
+            <p>25% est le taux de conversion pour les sites avec une étoile Google</p>
+        </div>
+        <div class="col-md-3">
+            <h4>80%</h4>
+            <p>80% des avis ont une note et des commentaires positif</p>
         </div>
     </div>
 </div>
