--- a/ForFormation/Views/Home/Index.cshtml
+++ b/ForFormation/Views/Home/Index.cshtml
@@ -11,25 +11,29 @@
     <h2>Pourquoi utiliser Avis Formation ? </h2>
     <h3>Bénéfices formateur</h3>
 
-    <div id="bgW" class="row">
-        <i class="fa-solid fa-block-question"></i>
+    <div id="bg-white" class="row">
+        
         <div class="col-md-6">
-            conversion
+            <i class="fas fa-shopping-cart"></i>
+            <h4>conversion</h4>
         </div>
         <div class="col-md-6">
-            visibilité
+            <i class="fas fa-expand-arrows-alt"></i>
+            <h4>visibilité</h4>
         </div>
         <div class="col-md-6">
-            fidélisation
+            <i class="fab fa-pagelines"></i>
+            <h4>fidélisation</h4>
         </div>
         <div class="col-md-6">
-            confiance
+            <i class="fas fa-heart"></i>
+            <h4>confiance</h4>
         </div>
 
     </div>
 
 </div>
-<div class="container text-center">
+<div id="bg-white" class="container text-center">
     <div class="row">
         <div class="col-md-8">
             <h3>Professionnels de la formation, affichez notre badge sur votre site pour augmenter vos conversion</h3>
@@ -47,7 +51,7 @@
         </div>
     </div>
 </div>
-<div class="container">
+<div id="bg-white" class="container">
     <div class="row text-center">
         <div class="col-md-3">
             <h4>85%</h4>
