--- a/ForFormation/wwwroot/css/site.css
+++ b/ForFormation/wwwroot/css/site.css
@@ -15,7 +15,7 @@ html {
 
 body {
   margin-bottom: 60px;
-  background-color: gray;
+  background-color: #EFEFEF;
 }
 
 .jumbotron {
@@ -24,7 +24,9 @@ body {
 }
 
 #bg-white{
-    background-color: blue;
+    background-color: white;
+    padding: 30px;
+    margin-bottom: 30px;
 }
 .widget-bottom
 {
@@ -39,6 +41,11 @@ body {
 {
     background-color: white;
     border: solid 1px orange;
-    border: solid 1px orange;
     border-radius: 5px;
+}
+.info-block
+{
+    background-color: white;
+    border: 1px solid white;
+    box-shadow: 10px 5px 5px grey;
 }
