--- a/ForFormation/Views/Formation/Index.cshtml
+++ b/ForFormation/Views/Formation/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="container text-right">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-3 col-sm-6">
             @foreach (var formation in Model)
             {
                 <article class="info-block">
