--- a/ForFormation/Views/Home/Index.cshtml
+++ b/ForFormation/Views/Home/Index.cshtml
@@ -4,36 +4,46 @@
 
 
 <div class="jumbotron text-center">
-    <h1>Mes formations</h1>
-    <p> Choissisez les meilleurs formations</p>
+    <div data-aos="fade-in"
+         data-aos-offset="300"
+         data-aos-easing="ease-in-sine">
+        <h1>Mes formations</h1>
+        <p> Choissisez les meilleurs formations</p>
+    </div>
+    
+</div>
+<div class="container">
+
 </div>
 <div class="container text-center">
     <h2>Pourquoi utiliser Avis Formation ? </h2>
     <h3>Bénéfices formateur</h3>
 
     <div id="bg-white" class="row">
-        
+
         <div class="col-md-6">
-            <i class="fas fa-shopping-cart"></i>
+            <i class="fas fa-shopping-cart fa-5x"></i>
             <h4>conversion</h4>
         </div>
         <div class="col-md-6">
-            <i class="fas fa-expand-arrows-alt"></i>
+            <i class="fas fa-expand-arrows-alt fa-5x"></i>
             <h4>visibilité</h4>
         </div>
         <div class="col-md-6">
-            <i class="fab fa-pagelines"></i>
+            <i class="fab fa-pagelines fa-5x"></i>
             <h4>fidélisation</h4>
         </div>
         <div class="col-md-6">
-            <i class="fas fa-heart"></i>
+            <i class="fas fa-heart fa-5x"></i>
             <h4>confiance</h4>
         </div>
 
     </div>
 
 </div>
-<div id="bg-white" class="container text-center">
+<div data-aos="fade-in"
+         data-aos-offset="100"
+         data-aos-easing="ease-in-sine" id="bg-white" class="container text-center">
     <div class="row">
         <div class="col-md-8">
             <h3>Professionnels de la formation, affichez notre badge sur votre site pour augmenter vos conversion</h3>
@@ -53,22 +63,27 @@
 </div>
 <div id="bg-white" class="container">
     <div class="row text-center">
-        <div class="col-md-3">
+        <div data-aos="fade-right"
+     data-aos-duration="3000"class="col-md-3">
             <h4>85%</h4>
             <p>85% des visiteurs consultent les avis clients avant d'avoir acheté</p>
         </div>
-        <div class="col-md-3">
+        <div data-aos="fade-up"
+     data-aos-duration="3000" class="col-md-3">
             <h4>91%</h4>
             <p>91% de ceux qui lisent les avis les considerent comme le vecteur numéro 1 dans le décisions d'achat</p>
         </div>
-        <div class="col-md-3">
+        <div data-aos="fade-down"
+     data-aos-duration="5000" class="col-md-3">
             <h4>25%</h4>
             <p>25% est le taux de conversion pour les sites avec une étoile Google</p>
         </div>
-        <div class="col-md-3">
+        <div data-aos="fade-left"
+     data-aos-duration="7000" class="col-md-3">
             <h4>80%</h4>
             <p>80% des avis ont une note et des commentaires positif</p>
         </div>
     </div>
 </div>
+
 
