--- a/ForFormation/Views/Contact/Index.cshtml
+++ b/ForFormation/Views/Contact/Index.cshtml
@@ -24,11 +24,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Message" class="control-label"></label>
-                <input asp-for="Message" class="form-control" />
+                <textarea asp-for="Message" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="Message" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Envoyer" class="btn btn-info" />
             </div>
         </form>
     </div>
