--- a/ForFormation/Views/Home/Index.cshtml
+++ b/ForFormation/Views/Home/Index.cshtml
@@ -5,10 +5,10 @@
 
 <div class="jumbotron text-center">
     <div data-aos="fade-in"
-         data-aos-offset="300"
+         
          data-aos-easing="ease-in-sine">
         <h1>Mes formations</h1>
-        <p> Choissisez les meilleurs formations</p>
+        <p> Présentation des formations que j'ai suivies</p>
     </div>
     
 </div>
